# GSIS

./: 2021_ug_billing_worksheet.xlsx  README.md
Documentation-Reference/: .~lock.Add-ins Report.odt#  .~lock.Integration Program Function Descriptions.odt#  Add-ins Report.odt  GroundStationIntegrationSoftware adjusted aproach.docx  Integration Program Function Descriptions.docx  Integration Program Function Descriptions.odt  Linux setup.docx
GNURadioCode/: DownlinkCode.grc  DownlinkCodeSatelliteSpecificNoUI.grc  FMTestCode.grc  GSIS.py  GSISFMTEST.py  GSISFMTest.grc  GSISSatNOAA15.py  GSISSatNOAA18.py  GSISSatNOAA19.py  GSISSatTest.grc  GSISSatTest.py
MainCode/: CMakeLists.txt  RigControl.cpp  RigControl.h  RigControlTest.cpp  RotorControl.cpp  RotorControl.h  RotorControlTest.cpp  Settings.cpp  Settings.h  main.cpp  satData.cpp  satData.h  satDataTest.cpp  settingsTestFile.cpp  ui.cpp  ui.h
predict-2.2.6/: CHANGES  HISTORY  NEWS  README  build  configure  predict-2.2.6.lsm  predict.c  predict.h  xpredict
predict-2.2.6/clients/earthtrack/: build
predict-2.2.6/default/: predict.db  predict.tle
predict-2.2.6/docs/html/: predict.html
predict-2.2.6/docs/man/: docmaker  predict.1
predict-2.2.6/docs/text/: predict.txt
predict-2.2.6/utils/fodtrack-0.1/: README  fodtrack  fodtrack.c  install
predict-2.2.6/vocalizer/: build  vocalizer.c  vocalizer.h
